# rag-plug

./: AGENTS.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: release.yml
examples/: async_usage.py  sync_usage.py
ragplug/: __init__.py  _api.py  _error_handler.py  _response_parser.py  _transport.py  _validation.py  client.py  types.py
scripts/: add_memory.py  search.py
